test/error/ast/SignForBool.mod
MODULE SignForBool;
VAR b: BOOLEAN; i: INTEGER;
BEGIN
  i := -b;
END SignForBool.
